sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:10: error: not found: value continueboucle
    continueboucle = getValeur(rg)>v
    ^